# impertio-rs

./: .gitignore  Cargo.toml  LICENSE  TODO.org
data/: impertio.yaml  index.org  root.html
data/CS/: index.org  root.html
src/: config.rs  files.rs  handler.rs  lib.rs  main.rs  metadata.rs  template.rs
src/org/: html.rs  inline.rs  lex.rs  mod.rs
