[package]
name = "impertio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
env_logger = "0.10.0"
fancy-regex = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.20"
rayon = "1.7.0"
relative-path = "1.9.0"
walkdir = "2.3.3"
