[package]
name = "impertio"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/r2boyo25/impertio-rs"
homepage = "https://github.com/r2boyo25/impertio-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
build_html = "2.4.0"
chrono = { version = "0.4.31", features = ["clock"] }
clap = { version = "4.3.23", features = ["derive"] }
dyn-clone = "1.0.16"
env_logger = "0.10.0"
fancy-regex = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.20"
relative-path = "1.9.0"
rss = "2.0.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
sitemap-rs = "0.2.0"
syntect = "5.1.0"
tera = "1.19.1"
walkdir = "2.3.3"
